JumpScript/tests/baselines/reference/Protected4.errors.txt
tests/cases/conformance/parser/ecmascript5/Protected/Protected4.jump(2,13): error TS1028: Accessibility modifier already seen.


==== tests/cases/conformance/parser/ecmascript5/Protected/Protected4.jump (1 errors) ====
    class C {
      protected public m() { }
                ~~~~~~
!!! error TS1028: Accessibility modifier already seen.
    }